fixed whitespace on About page, fixed phone view on main page

--- a/cvh/static/scss/_about.scss
+++ b/cvh/static/scss/_about.scss
@@ -1,5 +1,4 @@
 .about {
-    padding-bottom: 2rem;
     justify-content: center;
     height: 100%;
     &__bio__image {
@@ -17,11 +16,12 @@
         width: 80%;
         text-align: center;
         .secondary {
-            padding-bottom: 1rem;
+            padding: 0 1rem;
         }
         p {
             @include linear-gradient(rgba(231, 140, 140, 0.61), rgb(255, 255, 255));
             color: $letter-color;
+            //padding-top: -35px;
         }
     }
     .experience {
@@ -33,7 +33,7 @@
             display: flex;
             flex-direction: column;
             &__job {
-                padding: 4em 17em;
+                padding: 4em 7em;
                 //border: 5px solid black;
                 //margin: 5px 0;
             }
