--- a/cvh/static/scss/_home.scss
+++ b/cvh/static/scss/_home.scss
@@ -16,7 +16,7 @@
         border: solid 1px black;
         border-radius: 5px;
         width: 20rem;
-        background-color: grey;
+        background-color: white;
         position: relative;
         margin: 12px;
         padding: 8px;
